--- a/metadata.yaml
+++ b/metadata.yaml
@@ -35,6 +35,7 @@ subjects:
 - !lcsh 'Socialism'
 - !lcsh 'Autobiographies'
 - !lcsh 'Women authors, German -- Biography'
+- GITenberg
 title: 'Memoiren einer Sozialistin
 
   Lehrjahre'
